--- a/zamboni-resume.org
+++ b/zamboni-resume.org
@@ -4,10 +4,12 @@
 # AwesomeCV configuration options
 # #+photo: ./images/foto_diego.png
 #+photostyle: right,noedge
-#+cvcolor: awesome-orange
+#+cvcolor: awesome-concrete
 #+cvhighlights: false
+#+cvcolorizelinks: awesome-skyblue
+# #+cvunderlinelinks: red
 #+cvfooter_left: \today\\~
-#+cvfooter_middle: %a\\\textup{\tiny Source at https://gitlab.com/zzamboni/vita}
+#+cvfooter_middle: %a\\\textup{\tiny Source at \href{https://gitlab.com/zzamboni/vita}{https://gitlab.com/zzamboni/vita}}
 #+cvfooter_right: \thepage\\~
 
 # These options are useful for HTML or ASCII export, and harmless for
@@ -43,7 +45,7 @@
 :END:
 
 #+author: Diego Zamboni
-#+title: Senior Engineering Manager\nbsp\nbsp·\nbsp\nbsp​Computer Security Expert\nbsp\nbsp·\nbsp\nbsp​IT Security Architect
+#+title: Senior Engineering Leader · Computer Security Expert · IT Security Architect
 #+email: diego@zzamboni.org
 #+twitter: zzamboni
 #+linkedin: zzamboni
@@ -64,9 +66,9 @@ The "Private info" section contains private information which should not be incl
 ,#+address: <my address>
 ,#+extrainfo: <other private information>
 
-When encrypted, this information is simply ignored. When I want to produce a version of my CV which includes this information, I run ~M-x org-decrypt-entry~, which prompts for my GPG passphrase. Then, *without saving the file*, I run the following export command:
+When encrypted, this information is simply ignored. When I want to produce a version of my resume which includes this information, I run ~M-x org-decrypt-entry~, which prompts for my GPG passphrase. Then, *without saving the file* (since then the section gets automatically re-encrypted), I run the following export command (just place cursor at the end of the line and press =C-x C-e=:
 
-(org-export-to-file 'awesomecv "zamboni-vita-private.tex")
+(org-export-to-file 'awesomecv "zamboni-resume-private.tex")
 
 #+end_comment
 * Private info :noexport:crypt:
@@ -129,7 +131,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :CV_ENV:   cventries
 :END:
 
-** Swisscom
+** [[https://www.swisscom.com/][Swisscom]]
 :PROPERTIES:
 :CV_ENV:   cvemployer
 :LOCATION: Switzerland/U.S.A.
@@ -142,11 +144,11 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :FROM: <2019-04-01>
 :END:
 
-- Member of the /Swisscom IT Clouds/ leadership team, which defines and manages Swisscom's cloud offerings.
-- Member of the /Swisscom Enterprise Architecture/ team, which defines future Swisscom products and solutions.
-- Maintain cloud platform and service compliance with internal, contractual and regulatory standards (ISO27001, ISAE3402/3000, FINMA, GDPR).
-- Established /Security Champions/ initiative to promote and improve a culture of security responsibility.
-- Established organization-wide processes for risk management, threat modeling, audits and penetration testing.
+- As an EA, I define future Swisscom products and solutions as part of the /Swisscom Enterprise Architecture/ team.
+- As an SSA, I define and manage the security features and characteristics of [[https://www.swisscom.ch/en/business/enterprise/offer/cloud-data-center.html][Swisscom's cloud offerings]], as a member of the /Swisscom IT Clouds/ leadership team.
+- As an SSA, I maintain cloud platform and service compliance with internal, contractual and regulatory standards (e.g. [[https://www.swisscom.ch/en/about/company/governance/riskmanagement/iso-iec-managementsystem.html][ISO27001]], ISAE3402/3000, FINMA and GDPR).
+- As an SSA, I established /Security Champions/ initiative to promote and improve a culture of security responsibility.
+- As an SSA, I established organization-wide processes for risk management, threat modeling, audits and penetration testing.
 
 *** Engineering Team Lead for Monitoring, Health and State Management
 :PROPERTIES:
@@ -162,7 +164,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - Managed business relationship and technical implementation of OpsGenie for alert management in IT Clouds.
 - Defined and implemented integrations between Jira and OpsGenie for alerting of user-reported incidents.
 
-** CFEngine AS
+** [[https://cfengine.com/][CFEngine AS]]
 :PROPERTIES:
 :CV_ENV:   cvemployer
 :LOCATION: Norway/U.S.A. (remote)
@@ -182,7 +184,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - Overall CFEngine Advocate, with a special focus on security.
 - Gave talks, wrote articles and blog posts, taught classes, and in general spread the word about CFEngine.
 
-** HP Enterprise Services
+** [[https://www.hpe.com/][HP Enterprise Services]]
 :PROPERTIES:
 :CV_ENV:   cvemployer
 :LOCATION: Mexico
@@ -204,7 +206,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - Oversaw all security-related aspects of the design, implementation and delivery of IT Outsourcing projects.
 - Performed analysis, design and implementation of solutions in multiple areas of expertise, including system automation, configuration management, system administration, system design, virtualization, performance and security.
 
-** IBM Zurich Research Lab
+** [[https://www.zurich.ibm.com/][IBM Zurich Research Lab]]
 :PROPERTIES:
 :CV_ENV:   cvemployer
 :LOCATION: Switzerland
@@ -243,7 +245,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - Participated in the development of the /Bruce/ host vulnerability scanner, later released as the [[http://www.usenix.org/publications/login/1999-11/features/senss.html][Sun Enterprise Network Security Service]] (SENSS).
 - Designed and implemented the first version of the network-based components of /Bruce/, which allowed it to operate on several hosts in a network, controlled from a central location.
 
-** National Autonomous University of Mexico (UNAM)
+** [[https://www.unam.mx/][National Autonomous University of Mexico (UNAM)]]
 :PROPERTIES:
 :CV_ENV:   cvemployer
 :LOCATION: Mexico
@@ -289,7 +291,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :TO: <2001-08-01>
 :END:
 
-[[https://zzamboni.org/files/theses/zamboni-phd-thesis.pdf][/Using Internal Sensors for Computer Intrusion Detection/]], Advisor: [[http://spaf.cerias.purdue.edu/][Eugene H. Spafford]].
+/[[https://zzamboni.org/files/theses/zamboni-phd-thesis.pdf][Using Internal Sensors for Computer Intrusion Detection]]/, Advisor: [[http://spaf.cerias.purdue.edu/][Eugene H. Spafford]].
 
 * Certifications
 :PROPERTIES:
@@ -316,19 +318,19 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 ** [[https://leanpub.com/lit-config][Literate Configuration]]
 :PROPERTIES:
 :CV_ENV:   cvsubentry
-:DATE: Self-published, 2019
+:DATE: Self-published 2019
 :END:
 
 ** [[https://leanpub.com/learning-hammerspoon][Learning Hammerspoon]]
 :PROPERTIES:
 :CV_ENV:   cvsubentry
-:DATE: Self-published, 2018
+:DATE: Self-published 2018
 :END:
 
 ** [[http://cf-learn.info/][Learning CFEngine]]
 :PROPERTIES:
 :CV_ENV:   cvsubentry
-:DATE: O’Reilly Media 2012, self-published 2017
+:DATE: O’Reilly Media 2012, Self-published 2017
 :END:
 
 * Research, Publications, and References
