--- a/zamboni-resume.org
+++ b/zamboni-resume.org
@@ -7,7 +7,7 @@
 #+cvcolor: awesome-concrete
 #+cvhighlights: false
 #+cvcolorizelinks: awesome-skyblue
-# #+cvunderlinelinks: red
+#+cvunderlinelinks: false
 #+cvfooter_left: \today\\~
 #+cvfooter_middle: %a\\\textup{\tiny Source at \href{https://gitlab.com/zzamboni/vita}{https://gitlab.com/zzamboni/vita}}
 #+cvfooter_right: \thepage\\~
@@ -58,20 +58,23 @@
 I am a Senior Engineering Manager and IT Architect with 29 years of experience building systems and leading teams in startups as well as big companies. I have experience working with and leading remote teams. I possess a strong combination of leadership, conceptual and technical skills. I have excellent communication abilities, with ample writing, teaching and public speaking experience. I specialize in the areas of Computer Security, Cloud Computing and Configuration Management.
 #+latex: \end{cvparagraph}
 
-#+begin_comment --- How to include private information in the CV ---
+* Including private information :noexport:
 
 The "Private info" section contains private information which should not be included in the CV by default. It is kept encrypted automatically thanks to the org-crypt package, whose configuration you can see here: https://github.com/zzamboni/dot-emacs/blob/master/init.org#encryption. The "crypt" tag causes it to be encrypted automatically every time the file is saved, and the "noexport" tag causes it to be omitted when the file gets exported. Its contents, when unencrypted, contains field definitions like this:
 
-,#+mobile: <my mobile number>
-,#+address: <my address>
-,#+extrainfo: <other private information>
+#+begin_src org
+  ,#+mobile: <my mobile number>
+  ,#+address: <my address>
+  ,#+extrainfo: <other private information>
+#+end_src
 
 When encrypted, this information is simply ignored. When I want to produce a version of my resume which includes this information, I run ~M-x org-decrypt-entry~, which prompts for my GPG passphrase. Then, *without saving the file* (since then the section gets automatically re-encrypted), I run the following export command (just place cursor at the end of the line and press =C-x C-e=:
 
+#+begin_src emacs-lisp
 (org-export-to-file 'awesomecv "zamboni-resume-private.tex")
+#+end_src
 
-#+end_comment
-* Private info :noexport:crypt:
+** Private info :crypt:
 -----BEGIN PGP MESSAGE-----
 Comment: GPGTools - http://gpgtools.org
 
